fix alignment of main using flexbox

--- a/style.css
+++ b/style.css
@@ -34,19 +34,28 @@ header{
 }
 
 main{
+    max-height: 80vh;
+    padding: 60px;
     background-color: #1F2937;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .main-info{
     color: white;
+    max-width: 30vw;
+    padding: 10px;
 }
 
 .main-info>h1{
     font-size: 2.5em;
+}
+
+.main-info>p{
+    margin-bottom: 30px;
 }
 
 .sign-up{
